[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "endstone-addon-manager"
version = "0.1.0"
dependencies = []
authors = [
    { name = "Endstone Developers", email = "hello@endstone.dev" },
    { name = "Huang FTS427", email = "FTS427@outlook.com" },
]
description = "Manage the resource packs and addons fast"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["endstone", "plugin"]

[project.urls]
Homepage = "https://github.com/ZH-Server/endstone_addon_manager"

[project.entry-points."endstone"]
addon-manager = "endstone_addon_manager:AddonManager"